force-app/main/default/objects/Invoice_Custom__c/Invoice_Custom__c.object-meta.xml
<CustomObject>
    <label>Invoice Custom</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Customs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>