force-app/main/default/objects/Invoice_Custom__c/fields/Amount_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Paid__c</fullName>
    <formula>Bill_Amount__c -  Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To Be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>