force-app/main/default/objects/Invoice_Custom__c/fields/Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_Amount__c</fullName>
    <label>Bill Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>