force-app/main/default/objects/Invoice_Custom__c/recordTypes/Receivable_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Receivable_Invoice</fullName>
    <active>true</active>
    <label>Receivable Invoice</label>
</RecordType>